--- a/main.css
+++ b/main.css
@@ -99,6 +99,12 @@ body {
   color: #fff;
 }
 .imgs {
+  display: block;
+  position: relative;
+  background-size: 120%;
+  border-radius: 50%;
+  transition: 0.5s;
+  box-shadow: 0px .5rem 1rem rgba(0,0,0,.75);
 	border: 1px white solid;
 	border-radius: 50%;
   animation: float 6s ease-in-out infinite;
@@ -107,7 +113,6 @@ body {
   object-fit: cover;
   cursor: pointer;
 }
-
 
 .sub-title {
   margin-top: 3rem;
