--- a/main.css
+++ b/main.css
@@ -3,6 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+
+}
+
 body {
   height: 100vh;
   background-image: url(/img/landingPage.jpg);
@@ -10,6 +14,7 @@ body {
   background-position: top;
   object-fit: contain;
 }
+/** The Fonts **/
 @font-face {
   font-family: 'brushido';
   src: url(/fonts/Brushido.ttf);
@@ -18,6 +23,7 @@ body {
   font-family: 'roman';
   src: url(/fonts/HerculanumLTStd.otf);
 }
+/** Keyframes Animetions **/
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -38,40 +44,6 @@ body {
     opacity: 1;
     transform: translate(0); }
 }
-.container {
-  margin: 2.5rem;
-  align-items: center;
-  text-align: center;
-  color: #fff; 
-}
-#chin-title {
-  font-size: 2.5rem;
-  font-weight: 400;
-  animation: moveInLeft 1s ease-out;
-}
-
-#title-main {
-  font-family: 'brushido';
-  display: block;
-  font-size: 8rem;
-  font-weight: 800;
-  animation: moveInLeft 1s ease-out;
-}
-#title-sub {
-  font-family: 'roman';
-  display: block;
-  margin-top: -1.5rem;
-  font-size: 2rem;
-  font-weight: 800;
-  animation: moveInLeft 1s ease-out;
-}
-.sub-title {
-  margin-top: 7rem;
-  margin-bottom: -5rem;
-  font: normal 40px/80px 'roman';
-  text-align: center;
-  animation: moveInRight 1s ease-out;
-}
 @keyframes float {
 	0% {
 		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
@@ -86,11 +58,46 @@ body {
 		transform: translatey(0px);
 	}
 }
+
+.container {
+  margin: 2.5rem;
+  align-items: center;
+  text-align: center;
+  color: #fff; 
+}
+.circle-audio-player {
+  cursor: pointer;
+  float: right;
+}
+
+#chin-title {
+  font-size: 3.5rem;
+  animation: moveInLeft 1s ease-out;
+}
+
+#title-main {
+  font: 800 8rem 'brushido';
+  animation: moveInLeft 1s ease-out;
+}
+#title-sub {
+  font: normal 'roman';
+  display: block;
+  margin-top: -1.5rem;
+  font-size: 2.5rem;
+  animation: moveInLeft 1s ease-out;
+}
+.sub-title {
+  margin-top: 7rem;
+  margin-bottom: -5rem;
+  font: normal 40px/80px 'roman';
+  text-align: center;
+  animation: moveInRight 1s ease-out;
+}
+
 #content-img {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin-top: 6rem;
   animation: moveInRight 1s, ease-out;
 }
 
@@ -99,17 +106,13 @@ body {
   color: #fff;
 }
 .imgs {
-  display: block;
-  position: relative;
-  background-size: 120%;
   border-radius: 50%;
-  transition: 0.5s;
   box-shadow: 0px .5rem 1rem rgba(0,0,0,.75);
 	border: 1px white solid;
-	border-radius: 50%;
   animation: float 6s ease-in-out infinite;
   width: 200px;
   height: 200px;
+  margin-top: 1.5rem;
   object-fit: cover;
   cursor: pointer;
 }
